// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WalletDetails /> rendering Default rendering matches snapshot (zero L1 balance) 1`] = `
<DocumentFragment>
  .c4 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.8rem;
  gap: 5px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #151515;
}

.c3 {
  font-family: 'Poppins',sans-serif;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #151515;
}

.c1 {
  color: #151515;
  font-weight: 600;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  color: #151515;
  border-top: 1px solid #EEEEEE;
  font-size: 0.8rem;
  margin-top: 8px;
  padding-top: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 {
  color: #404040;
  font-size: 0.8rem;
  text-align: right;
}

.c0 {
  display: grid;
  font-family: 'Poppins',sans-serif;
  gap: 4px 0;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
  padding: 12px;
}

<div
    class="c0"
  >
    <span
      class="c1"
      title="0xC36946c342ff98C3196e74C7bEf060b645B7fDB6"
    >
      0xC369...fDB6
    </span>
    <span
      class="c2"
    >
      <span
        class="c3"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#clip0_14895_64936)"
          >
            <path
              d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
              data-testid="icon-eth"
              fill="#151515"
              fill-opacity="0.8"
            />
            <path
              d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
              fill="#151515"
              fill-opacity="0.3"
            />
            <path
              d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
              fill="#151515"
            />
            <path
              d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
              fill="#151515"
              opacity="0.3"
            />
            <path
              d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
              fill="#151515"
              opacity="0.1"
            />
            <path
              d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
              fill="#151515"
              opacity="0.6"
            />
          </g>
          <defs>
            <clippath
              id="clip0_14895_64936"
            >
              <rect
                fill="#151515"
                height="16"
                transform="translate(7.14258 4.5)"
                width="9.71429"
              />
            </clippath>
          </defs>
        </svg>
        0.24
      </span>
    </span>
    <span
      class="c4"
      role="button"
    >
      Copy address 
      <img
        alt="copy"
        src="[object Object]"
      />
    </span>
    <span
      class="c5"
    >
      $1,234.56
    </span>
    <span
      class="c6"
    >
      Ethereum L1:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          0
        </span>
      </span>
    </span>
    <span
      class="c6"
    >
      Loopring L2:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          0.23
        </span>
      </span>
    </span>
    <span
      class="c6"
    >
      ImmutableX L2:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          0.01
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<WalletDetails /> rendering Default rendering matches snapshot (zero L2 balance) 1`] = `
<DocumentFragment>
  .c4 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.8rem;
  gap: 5px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #151515;
}

.c3 {
  font-family: 'Poppins',sans-serif;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #151515;
}

.c1 {
  color: #151515;
  font-weight: 600;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  color: #151515;
  border-top: 1px solid #EEEEEE;
  font-size: 0.8rem;
  margin-top: 8px;
  padding-top: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 {
  color: #404040;
  font-size: 0.8rem;
  text-align: right;
}

.c0 {
  display: grid;
  font-family: 'Poppins',sans-serif;
  gap: 4px 0;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
  padding: 12px;
}

<div
    class="c0"
  >
    <span
      class="c1"
      title="0xC36946c342ff98C3196e74C7bEf060b645B7fDB6"
    >
      0xC369...fDB6
    </span>
    <span
      class="c2"
    >
      <span
        class="c3"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#clip0_14895_64936)"
          >
            <path
              d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
              data-testid="icon-eth"
              fill="#151515"
              fill-opacity="0.8"
            />
            <path
              d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
              fill="#151515"
              fill-opacity="0.3"
            />
            <path
              d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
              fill="#151515"
            />
            <path
              d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
              fill="#151515"
              opacity="0.3"
            />
            <path
              d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
              fill="#151515"
              opacity="0.1"
            />
            <path
              d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
              fill="#151515"
              opacity="0.6"
            />
          </g>
          <defs>
            <clippath
              id="clip0_14895_64936"
            >
              <rect
                fill="#151515"
                height="16"
                transform="translate(7.14258 4.5)"
                width="9.71429"
              />
            </clippath>
          </defs>
        </svg>
        1.01
      </span>
    </span>
    <span
      class="c4"
      role="button"
    >
      Copy address 
      <img
        alt="copy"
        src="[object Object]"
      />
    </span>
    <span
      class="c5"
    >
      $1,234.56
    </span>
    <span
      class="c6"
    >
      Ethereum L1:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          1
        </span>
      </span>
    </span>
    <span
      class="c6"
    >
      Loopring L2:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          0
        </span>
      </span>
    </span>
    <span
      class="c6"
    >
      ImmutableX L2:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          0.01
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<WalletDetails /> rendering Default rendering matches snapshot (zero balance) 1`] = `
<DocumentFragment>
  .c4 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.8rem;
  gap: 5px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #151515;
}

.c3 {
  font-family: 'Poppins',sans-serif;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #151515;
}

.c1 {
  color: #151515;
  font-weight: 600;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  color: #151515;
  border-top: 1px solid #EEEEEE;
  font-size: 0.8rem;
  margin-top: 8px;
  padding-top: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 {
  color: #404040;
  font-size: 0.8rem;
  text-align: right;
}

.c0 {
  display: grid;
  font-family: 'Poppins',sans-serif;
  gap: 4px 0;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
  padding: 12px;
}

<div
    class="c0"
  >
    <span
      class="c1"
      title="0xC36946c342ff98C3196e74C7bEf060b645B7fDB6"
    >
      0xC369...fDB6
    </span>
    <span
      class="c2"
    >
      <span
        class="c3"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#clip0_14895_64936)"
          >
            <path
              d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
              data-testid="icon-eth"
              fill="#151515"
              fill-opacity="0.8"
            />
            <path
              d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
              fill="#151515"
              fill-opacity="0.3"
            />
            <path
              d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
              fill="#151515"
            />
            <path
              d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
              fill="#151515"
              opacity="0.3"
            />
            <path
              d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
              fill="#151515"
              opacity="0.1"
            />
            <path
              d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
              fill="#151515"
              opacity="0.6"
            />
          </g>
          <defs>
            <clippath
              id="clip0_14895_64936"
            >
              <rect
                fill="#151515"
                height="16"
                transform="translate(7.14258 4.5)"
                width="9.71429"
              />
            </clippath>
          </defs>
        </svg>
        0.01
      </span>
    </span>
    <span
      class="c4"
      role="button"
    >
      Copy address 
      <img
        alt="copy"
        src="[object Object]"
      />
    </span>
    <span
      class="c5"
    >
      $1,234.56
    </span>
    <span
      class="c6"
    >
      Ethereum L1:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          0
        </span>
      </span>
    </span>
    <span
      class="c6"
    >
      Loopring L2:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          0
        </span>
      </span>
    </span>
    <span
      class="c6"
    >
      ImmutableX L2:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          0.01
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<WalletDetails /> rendering Default rendering matches snapshot 1`] = `
<DocumentFragment>
  .c4 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.8rem;
  gap: 5px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #151515;
}

.c3 {
  font-family: 'Poppins',sans-serif;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #151515;
}

.c1 {
  color: #151515;
  font-weight: 600;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  color: #151515;
  border-top: 1px solid #EEEEEE;
  font-size: 0.8rem;
  margin-top: 8px;
  padding-top: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 {
  color: #404040;
  font-size: 0.8rem;
  text-align: right;
}

.c0 {
  display: grid;
  font-family: 'Poppins',sans-serif;
  gap: 4px 0;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
  padding: 12px;
}

<div
    class="c0"
  >
    <span
      class="c1"
      title="0xC36946c342ff98C3196e74C7bEf060b645B7fDB6"
    >
      0xC369...fDB6
    </span>
    <span
      class="c2"
    >
      <span
        class="c3"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#clip0_14895_64936)"
          >
            <path
              d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
              data-testid="icon-eth"
              fill="#151515"
              fill-opacity="0.8"
            />
            <path
              d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
              fill="#151515"
              fill-opacity="0.3"
            />
            <path
              d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
              fill="#151515"
            />
            <path
              d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
              fill="#151515"
              opacity="0.3"
            />
            <path
              d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
              fill="#151515"
              opacity="0.1"
            />
            <path
              d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
              fill="#151515"
              opacity="0.6"
            />
          </g>
          <defs>
            <clippath
              id="clip0_14895_64936"
            >
              <rect
                fill="#151515"
                height="16"
                transform="translate(7.14258 4.5)"
                width="9.71429"
              />
            </clippath>
          </defs>
        </svg>
        1.24
      </span>
    </span>
    <span
      class="c4"
      role="button"
    >
      Copy address 
      <img
        alt="copy"
        src="[object Object]"
      />
    </span>
    <span
      class="c5"
    >
      $1,234.56
    </span>
    <span
      class="c6"
    >
      Ethereum L1:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          1
        </span>
      </span>
    </span>
    <span
      class="c6"
    >
      Loopring L2:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          0.23
        </span>
      </span>
    </span>
    <span
      class="c6"
    >
      ImmutableX L2:
    </span>
    <span
      class="c6"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_14895_64936)"
            >
              <path
                d="M12 16.4939V20.5L16.8571 13.5929L12 16.4939Z"
                data-testid="icon-eth"
                fill="#151515"
                fill-opacity="0.8"
              />
              <path
                d="M12 10.4252V15.5671L16.8571 12.6584L12 10.4252Z"
                fill="#151515"
                fill-opacity="0.3"
              />
              <path
                d="M12 4.5V10.4252L16.8571 12.6584L12 4.5Z"
                fill="#151515"
              />
              <path
                d="M11.9997 16.4939V20.5L7.14258 13.5929L11.9997 16.4939Z"
                fill="#151515"
                opacity="0.3"
              />
              <path
                d="M11.9997 10.4252V15.5671L7.14258 12.6584L11.9997 10.4252Z"
                fill="#151515"
                opacity="0.1"
              />
              <path
                d="M11.9997 4.5V10.4252L7.14258 12.6584L11.9997 4.5Z"
                fill="#151515"
                opacity="0.6"
              />
            </g>
            <defs>
              <clippath
                id="clip0_14895_64936"
              >
                <rect
                  fill="#151515"
                  height="16"
                  transform="translate(7.14258 4.5)"
                  width="9.71429"
                />
              </clippath>
            </defs>
          </svg>
          0.01
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;
